Update: Настройка кеша

--- a/интеграция.md
+++ b/интеграция.md
@@ -1,1 +1,90 @@
- 
+ # Интеграция Stripe в проект SmartLiving
+
+## 1. Регистрация в Stripe
+
+1. Перейдите на [stripe.com](https://stripe.com) и создайте аккаунт
+2. После регистрации перейдите в Dashboard
+3. В разделе Developers -> API keys найдите:
+   - Publishable key (начинается с `pk_test_`)
+   - Secret key (начинается с `sk_test_`)
+
+## 2. Настройка переменных окружения
+
+Создайте файл `.env.local` в корне проекта и добавьте следующие переменные:
+
+```env
+STRIPE_SECRET_KEY=sk_test_your_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
+```
+
+## 3. Установка необходимых пакетов
+
+```bash
+npm install @stripe/stripe-js @stripe/react-stripe-js stripe
+```
+
+## 4. Тестовые карты для проверки
+
+### Успешные платежи:
+- 4242 4242 4242 4242 (Visa)
+- 5555 5555 5555 4444 (Mastercard)
+- 3782 822463 10005 (American Express)
+
+### Неудачные платежи:
+- 4000 0000 0000 0002 (Declined)
+- 4000 0000 0000 9995 (Insufficient funds)
+
+### Тестовые данные для карт:
+- Срок действия: любая будущая дата (например, 12/25)
+- CVC: любые 3 цифры (например, 123)
+- Почтовый индекс: любые 5 цифр (например, 12345)
+
+## 5. Проверка интеграции
+
+1. Запустите приложение в режиме разработки:
+```bash
+npm run dev
+```
+
+2. Добавьте товары в корзину и перейдите к оформлению заказа
+
+3. Выберите способ оплаты "Credit/Debit Card"
+
+4. Используйте тестовую карту для проверки:
+   - 4242 4242 4242 4242
+   - Срок действия: 12/25
+   - CVC: 123
+
+5. Проверьте в панели управления Stripe:
+   - Успешные платежи
+   - Созданные заказы
+   - Webhook события
+
+## 6. Webhook настройка (опционально)
+
+Для обработки событий Stripe настройте webhook:
+
+1. В панели управления Stripe перейдите в Developers -> Webhooks
+2. Нажмите "Add endpoint"
+3. Укажите URL вашего API: `https://ваш-домен/api/webhooks/stripe`
+4. Выберите события для отслеживания:
+   - payment_intent.succeeded
+   - payment_intent.payment_failed
+   - charge.succeeded
+   - charge.failed
+
+## 7. Безопасность
+
+- Никогда не публикуйте Secret key
+- Всегда используйте HTTPS
+- Валидируйте все входные данные
+- Используйте Stripe Elements для безопасного ввода данных карты
+- Регулярно обновляйте зависимости
+
+## 8. Поддержка
+
+При возникновении проблем:
+1. Проверьте консоль браузера
+2. Проверьте логи сервера
+3. Обратитесь в [поддержку Stripe](https://support.stripe.com)
+4. Проверьте [документацию Stripe](https://stripe.com/docs)
