Новое: Поправил тех  поддержку

--- a/src/app/shop/Задачи.md
+++ b/src/app/shop/Задачи.md
@@ -1,20 +1,3 @@
-AddProductModal.tsx EditProductModal.tsx 
-Изучить как это выполнено у раздела RUGS MATS и воплотить в разделе CLOTHING 
-[] Добавить размеры к разделу Clothing 
-Jeans - 6, 7, 8, 9, 10, 11, 12, 14, 16, 18, 20, 22, 24, 26, 27, 28, 29, 30, 32, 33, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56
-Joggers - 6, 7, 8, 9, 10, 11, 12, 14, 16, 18, 20, 22, 24, 26, 27, 28, 29, 30, 32, 33, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56
-Hoodies - XS, S, M, L, XL, XXL, XXXL, 2XL, 3XL, S/M, M/L, L/XL, One Size
-Polo Shirts - XS, S, M, L, XL, XXL, XXXL, 2XL, 3XL, S/M, M/L, L/XL, One Size
-Loungewear - XS, S, M, L, XL, XXL, XXXL, 2XL, 3XL, S/M, M/L, L/XL, One Size
-Bathrobes - XS, S, M, L, XL, XXL, XXXL, 2XL, 3XL, S/M, M/L, L/XL, One Size
+На странице категорий товаров реализованы цены. Regular price and sale price. Нужно создать Regular Price перечеркнута A Стоимость, которая отображается красным, - sale price.
 
-После выполнения задачи отметить тут выполнение задачи 
-
-При нажатии на 
-Jeans
-Joggers
-Hoodies
-Polo Shirts
-Loungewear
-Bathrobes
-Отркываются поля для заполнения, дополнительно к этому должны открываться выборы размера  
+У нас есть страница "shop" В ней найти файл 3d/page и реализовать задачу 
