Обновление : Названия товаров по алфавиту

--- a/src/app/Задачи.md
+++ b/src/app/Задачи.md
@@ -6,12 +6,15 @@
 - Провести базовый SEO-аудит (title, description, h1, robots.txt, sitemap.xml, скорость загрузки)
 
 ## День 2: Добавление новых страниц
+- Создать страницу "О компании" (about)
+- Создать страницу "Блог" (blog)
 - Создать страницу "Отзывы клиентов" (reviews/testimonials)
 - Создать страницу "Акции и скидки" (sales/promotions)
 
 ## День 3: Улучшение главной страницы
 - Добавить блоки: популярные категории, преимущества, отзывы, CTA (призыв к действию)
 - Добавить баннеры/слайдеры для акций и новинок
+- Добавить блок "Блог" на главную (последние статьи)
 
 ## День 4: SEO-оптимизация контента
 - Прописать уникальные title и description для всех новых и основных страниц
